--- a/src/product_detail.html
+++ b/src/product_detail.html
@@ -19,7 +19,7 @@
 
     <main class="pd_main container-xl">
 
-        <p class="pd_bread">首頁 | 周邊產品 | 草莓牛奶(六入組)</p>
+        <p class="pd_bread">首頁 | 周邊產品 </p>
         <div class="pd_area">
             <!-- 商品主圖 -->
             <div>
