feat mblist 欄位修改 php設定

--- a/src/member.html
+++ b/src/member.html
@@ -112,9 +112,9 @@
 	<div class="mb_container">
 		<div class="mb_cl_wrp tab" data-id="btn3">
 
-			<table>
-				<thead>
-					<tr>
+			<table class="tblist">
+				<thead class="tbname">
+					<tr class="li1">
 						<th>訂單日期</th>
 						<th>訂單編號</th>
 						<th>品項數量</th>
