feat: 維修會員中心地址下拉選單，重新排版訂單資訊畫面

--- a/src/member.html
+++ b/src/member.html
@@ -47,11 +47,10 @@
 				</label>
 				<div class="cts">
 					<select name="" id="city" class="ads">
-						<option value="000"></option>
 					</select>
 
 					<select name="" id="area" class="ads">
-						<option value="000"></option>
+						<option value=""></option>
 					</select>
 
 					<input type="text" placeholder="" id="address" class="mb_input" />
@@ -121,10 +120,12 @@
 						<th>訂購總額</th>
 						<th>付款方式</th>
 						<th>訂單狀態</th>
+						<th></th>
+
 					</tr>
 				</thead>
 				<tbody>
-					<tr>
+					<tr class="li2">
 						<td>2022/03/20</td>
 						<td>1000224</td>
 						<td>1</td>
@@ -134,20 +135,19 @@
 						<td>
 							<button class="cel_list_btn">取消訂單</button>
 							<button id="op_btn">+</button>
-							<div class="de">
-								<p>羊毛毯(綠)</p>
-								<p>1件</p>
-								<p>NTS.499</p>
-							</div>
+
 						</td>
 
-
-
-
-
-					</tr>
+						
+			</tr>
+			<tr class="li3">
+				<td>羊毛毯(綠)</td>
+				<td>1件</td>
+				<td>NTS.499</td>
+			</tr>
 				</tbody>
 			</table>
+			
 			<!-- <ul class="cl_list container-lg">
 					<li class="cl_t accordion-header" id="headingOne">
 						<p>訂單日期</p>
