--- a/src/activity.html
+++ b/src/activity.html
@@ -22,29 +22,20 @@
         <h5 class="title">選擇你喜歡的動物，一起在Sìkha玩耍吧！</h5>
         <div class="checkList">
             <section id="slider">
-                <input v-for="icon in lable_icons" class="slider" type="radio" name="slider" :id="'s'+icon.key"
-                    v-model="activeIndex" :value="icon.key">
-                <!-- <input class="slider" type="radio" name="slider" id="s1" checked>
+                <input class="slider" type="radio" name="slider" id="s0" checked>
+                <input class="slider" type="radio" name="slider" id="s1" v-model="activeIndex">
                 <input class="slider" type="radio" name="slider" id="s2">
                 <input class="slider" type="radio" name="slider" id="s3">
                 <input class="slider" type="radio" name="slider" id="s4">
                 <input class="slider" type="radio" name="slider" id="s5">
-                <input class="slider" type="radio" name="slider" id="s6"> -->
 
-                <label @click="test(icon.type)" :class="'-active-'+ activeIndex" v-for="icon in lable_icons"
-                    :for="'s'+icon.key" :id="'slide'+icon.key"><img :src="icon.img" alt=""></label>
-                <!-- <label @click="activeIndex=0" for="s1" id="slide1"><img src="./img/activity/sheep 2.png" 
-                    alt=""></label> -->
-                <!-- <label @click="activeIndex=1" for="s2" id="slide2"><img src="./img/activity/deer 2.png"
+                <label @click="activeIndex=0" for="s0" id="slide0"><img src="./img/activity/sheep 2.png" alt=""></label>
+                <label @click="activeIndex=1" for="s1" id="slide1"><img src="./img/activity/deer 2.png" alt=""></label>
+                <label @click="activeIndex=2" for="s2" id="slide2"><img src="./img/activity/alpaca 2.png"
                         alt=""></label>
-                <label @click="activeIndex=2" for="s3" id="slide3"><img src="./img/activity/alpaca 2.png"
-                        alt=""></label>
-                <label @click="activeIndex=3" for="s4" id="slide4"><img src="./img/activity/cow 2.png"
-                        alt=""></label>
-                <label @click="activeIndex=4" for="s5" id="slide5"><img src="./img/activity/pig 2.png"
-                        alt=""></label>
-                <label @click="activeIndex=5" for="s6" id="slide6"><img src="./img/activity/horse 2.png"
-                        alt=""></label> -->
+                <label @click="activeIndex=3" for="s3" id="slide3"><img src="./img/activity/cow 2.png" alt=""></label>
+                <label @click="activeIndex=4" for="s4" id="slide4"><img src="./img/activity/pig 2.png" alt=""></label>
+                <label @click="activeIndex=5" for="s5" id="slide5"><img src="./img/activity/horse 2.png" alt=""></label>
             </section>
         </div>
 
@@ -58,12 +49,21 @@
                 </button>
             </div>
             <input class="modal_date" id="date" type="date"><br><br>
-            <template v-for="(item2,key) in modal_open.time_period">
+            <!-- <template v-for="(item2,key) in modal_open.time_period">
                 <input type="radio" :id="period+key" name="period"><label :for="period+key"> {{item2}}</label><br>
-            </template>
+            </template> -->
+            <!-- <template v-for="(item2,key) in modal_open.TIME">
+                <input type="radio" :id="period+key" name="period"><label :for="period+key"> {{item2}}</label><br>
+            </template> -->
+            <input type="radio" id="period1" name="period"><label
+                for="period1">場次一：{{modal_open.S1_START}}-{{modal_open.S1_END}}</label><br>
+            <input type="radio" id="period1" name="period"><label
+                for="period1">場次二：{{modal_open.S2_START}}-{{modal_open.S2_END}}</label><br>
+            <input type="radio" id="period1" name="period"><label
+                for="period1">場次三：{{modal_open.S3_START}}-{{modal_open.S3_END}}</label><br>
 
-            預約人數： <input type="number" name="quantity" min="1" max="10"> 人</br>
-            剩餘人數： {{modal_open.remain}} 人</br><br>
+            預約人數： <input type="number" name="quantity" min="1" max="20"> 人</br>
+            剩餘人數： {{modal_open.OPACITY}} 人</br><br>
             <button class="modal_button">我要預約</button><br><br>
             <img class="modal_img" src="./img/activity/horse1.png" alt="">
         </div>
@@ -74,9 +74,10 @@
                 <img src="./img/activity/game_entrance.png" alt="">
                 <h5>線上體驗</h5>
             </a></div>
+
         <!-- 點擊展開item區域 -->
-        <!-- <section class="odd_item" v-for="(aaa,key) in all_data[activeIndex].list"> -->
-        <section class="odd_item" v-for="(aaa,key) in showList">
+        <section class="odd_item" v-for="(aaa,key) in all_data[activeIndex].list">
+
             <div class="item">
                 <div class="item_imgcover">
                     <div class="icon_positiveCover">
@@ -84,14 +85,14 @@
                         <div class="item_r_cover">
                             <img v-if='aaa.icon_img' @click="open(aaa)" class="item_img_icon" :src="aaa.icon_img"
                                 alt="">
-                            <button v-if='aaa.time_period' class="reserve" :class="'-index'+ activeIndex"
+                            <button v-if='aaa.TIME' class="reserve" :class="'-index'+ activeIndex"
                                 :style="{'background': all_data[activeIndex].button_bg}"
                                 @click="open(aaa)">點我預約</button>
                         </div>
                     </div>
                 </div>
                 <div class="item_p">
-                    <h5 class="item_title">{{aaa.NAME}}{{xxx}}</h5>
+                    <h5 class="item_title">{{aaa.NAME}}</h5>
                     <p class="item_desc">{{aaa.DESC}}</p>
                     <!-- <button v-if='aaa.time_period' class="reserve" :class="'-index'+ activeIndex"
                         :style="{'background': all_data[activeIndex].button_bg}" @click="open(aaa)">點我預約</button> -->
