feat:確認修改按鈕綁定事件

--- a/src/member.html
+++ b/src/member.html
@@ -64,8 +64,15 @@
 				<input type="text" name="tel" class="mb_input" id="mb_tel" />
 			</div>
 
+			<div class="mb_tel">
+				<label for="" class="lbt">
+					<p>修改密碼:</p>
+				</label>
+				<input type="text" name="tel" class="mb_input" id="mb_tel" />
+			</div>
 
 
+<!-- 
 			<label for="" class="lbt">
 				<p>密碼:</p>
 			</label>
@@ -82,10 +89,10 @@
 					<p>輸入新密碼:</p>
 				</label>
 				<input type="text" name="tel" class="mb_input" id="newpd" />
-			</div>
+			</div> -->
 
 			<div class="mb_btn">
-				<button class="save_btn">確認修改</button>
+				<button class="save_btn" id="confirmBtn">確認修改</button>
 			</div>
 
 
