--- a/src/member.html
+++ b/src/member.html
@@ -68,7 +68,7 @@
 				<label for="" class="lbt">
 					<p>修改密碼:</p>
 				</label>
-				<input type="text" name="tel" class="mb_input" id="mb_tel" />
+				<input type="text" name="tel" class="mb_input" id="newpd" />
 			</div>
 
 
