--- a/src/activity.html
+++ b/src/activity.html
@@ -64,7 +64,7 @@
 
             預約人數： <input type="number" name="quantity" min="1" max="20"> 人</br>
             剩餘人數： {{modal_open.OPACITY}} 人</br><br>
-            <button class="modal_button" @click="addReservation">我要預約</button><br><br>
+            <button class="modal_button" @click="addReservation()">我要預約</button><br><br>
             <img class="modal_img" src="./img/activity/horse1.png" alt="">
         </div>
 
@@ -87,7 +87,7 @@
                                 alt="">
                             <button v-if='aaa.TIME' class="reserve" :class="'-index'+ activeIndex"
                                 :style="{'background': all_data[activeIndex].button_bg}" @click="open(aaa)">
-                                <div @click="check_login">點我預約</div>
+                                <div @click="check_login()">點我預約</div>
                             </button>
                         </div>
                     </div>
