--- a/src/activity.html
+++ b/src/activity.html
@@ -22,20 +22,24 @@
         <h5 class="title">選擇你喜歡的動物，一起在Sìkha玩耍吧！</h5>
         <div class="checkList">
             <section id="slider">
-                <input class="slider" type="radio" name="slider" id="s0" checked>
+                <input v-for="icon in lable_icons" class="slider" type="radio" name="slider" :id="'s'+icon.key"
+                    v-model="activeIndex" :value="icon.key">
+                <!-- <input class="slider" type="radio" name="slider" id="s0" checked>
                 <input class="slider" type="radio" name="slider" id="s1" v-model="activeIndex">
                 <input class="slider" type="radio" name="slider" id="s2">
                 <input class="slider" type="radio" name="slider" id="s3">
                 <input class="slider" type="radio" name="slider" id="s4">
-                <input class="slider" type="radio" name="slider" id="s5">
+                <input class="slider" type="radio" name="slider" id="s5"> -->
 
-                <label @click="activeIndex=0" for="s0" id="slide0"><img src="./img/activity/sheep 2.png" alt=""></label>
+                <label :class="'-active-'+ activeIndex" v-for="icon in lable_icons" :for="'s'+icon.key"
+                    :id="'slide'+icon.key"><img :src="icon.img" alt=""></label>
+                <!-- <label @click="activeIndex=0" for="s0" id="slide0"><img src="./img/activity/sheep 2.png" alt=""></label>
                 <label @click="activeIndex=1" for="s1" id="slide1"><img src="./img/activity/deer 2.png" alt=""></label>
                 <label @click="activeIndex=2" for="s2" id="slide2"><img src="./img/activity/alpaca 2.png"
                         alt=""></label>
                 <label @click="activeIndex=3" for="s3" id="slide3"><img src="./img/activity/cow 2.png" alt=""></label>
                 <label @click="activeIndex=4" for="s4" id="slide4"><img src="./img/activity/pig 2.png" alt=""></label>
-                <label @click="activeIndex=5" for="s5" id="slide5"><img src="./img/activity/horse 2.png" alt=""></label>
+                <label @click="activeIndex=5" for="s5" id="slide5"><img src="./img/activity/horse 2.png" alt=""></label> -->
             </section>
         </div>
 
@@ -48,7 +52,7 @@
                     <span class="-hr -bottom"></span>
                 </button>
             </div>
-            <input class="modal_date" id="date" type="date"><br><br>
+            <input v-model="DATE" class="modal_date" id="date" type="date"><br><br>
             <!-- <template v-for="(item2,key) in modal_open.time_period">
                 <input type="radio" :id="period+key" name="period"><label :for="period+key"> {{item2}}</label><br>
             </template> -->
