feat: 修改checkout.php連接後台串接資料庫 成功, 修改函式，修改判斷式

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -240,7 +240,7 @@
 			</div>
 			<!---------- 結帳流程三 ---------->
 			<div v-else-if="step == 'C'" class="stepC container-lg">
-				<h3>訂單已完成，您的訂單編號為#20220311</h3>
+				<h3>訂單已完成，您的訂單編號為#{{orderID}}</h3>
 				<!-- <div id="msg" class="success"></div> -->
 				<h5>
 					您可以前往(<a href="member.html" class="myMB">我的會員</a
