feat: 已上架活動不可修改人數和時間

--- a/src/back_activity_add.html
+++ b/src/back_activity_add.html
@@ -65,17 +65,17 @@
     
                     <div class="margintop_25">
                         <label>動物分類</label>
-                        <input type="radio" name="catergory" id="cow" value="cow" v-model="category">
+                        <input type="radio" name="catergory" id="cow" value="4" v-model="categoryId">
                         <label for="cow">牛</label>
-                        <input type="radio" name="catergory" id="sheep" value="sheep" v-model="category">
+                        <input type="radio" name="catergory" id="sheep" value="1" v-model="categoryId">
                         <label for="sheep">羊</label>
-                        <input type="radio" name="catergory" id="deer" value="deer" v-model="category">
+                        <input type="radio" name="catergory" id="deer" value="2" v-model="categoryId">
                         <label for="deer">鹿</label>
-                        <input type="radio" name="catergory" id="pig" value="pig" v-model="category">
+                        <input type="radio" name="catergory" id="pig" value="5" v-model="categoryId">
                         <label for="pig">豬</label>
-                        <input type="radio" name="catergory" id="horse" value="horse" v-model="category">
+                        <input type="radio" name="catergory" id="horse" value="6" v-model="categoryId">
                         <label for="horse">馬</label>
-                        <input type="radio" name="catergory" id="alpaca" value="alpaca" v-model="category">
+                        <input type="radio" name="catergory" id="alpaca" value="3" v-model="categoryId">
                         <label for="alpaca">草泥馬</label>
                     </div>
     
