--- a/src/news_in4.html
+++ b/src/news_in4.html
@@ -23,7 +23,7 @@
         <main class="main_min container-lg">
 
             <div class="divtop">
-                <h3>歡慶兒童節 帶小孩來牧場放電囉</h3>
+                <h3>【公告】2022春節營運時間及票價優惠</h3>
                 <br><br>
                 <pre>發布日期      3/15</pre>
             </div>
@@ -31,28 +31,23 @@
             <div class="down container-lg">
 
                 <div class="left container-lg">
-                    <p>在兒童節4/2~4/5號連假期間，
+                    <p>在春節活動期間所有票價都給9折優惠，
                         <br>
-                        12歲以下兒童通通免費入園!
+                        由於春節人手不足，一部份活動將不開放，
                         <br>
-                        陪同成人可享票價優惠180元!
-                        <br>
-                        <br>
-                        歡迎大朋友小朋友藝起來
-                        <br>
-                        Sìkha 牧場度過美好時光
+                        敬請見諒
                     </p>
 
                     <a href="news.html">
                         <-返回列表 </a>
                             <br>
-                            <a href="">
+                            <a href="news_in3.html">
                                 <-上一則 </a>
-                                    <a href="news_in2.html"> 下一則-> </a>
+                                    <a href="news_in5.html"> 下一則-> </a>
 
                 </div>
                 <div class="right container-lg">
-                    <img src="./img/news/Rectangle 196.png" alt="">
+                    <img src="./img/news/Rectangle 1968.png" alt="">
                 </div>
             </div>
 
