--- a/src/news_in6.html
+++ b/src/news_in6.html
@@ -23,36 +23,31 @@
         <main class="main_min container-lg">
 
             <div class="divtop">
-                <h3>歡慶兒童節 帶小孩來牧場放電囉</h3>
+                <h3>【聖誕節限時門票優惠】門票優惠只要200元</h3>
                 <br><br>
-                <pre>發布日期      3/15</pre>
+                <pre>發布日期      12/15</pre>
             </div>
 
             <div class="down container-lg">
 
                 <div class="left container-lg">
-                    <p>在兒童節4/2~4/5號連假期間，
+                    <p>在聖誕節來本牧場每張票只要200元的優惠，
                         <br>
-                        12歲以下兒童通通免費入園!
+                        每個人都還會有聖誕小禮物可以拿，
                         <br>
-                        陪同成人可享票價優惠180元!
-                        <br>
-                        <br>
-                        歡迎大朋友小朋友藝起來
-                        <br>
-                        Sìkha 牧場度過美好時光
+                        只有聖誕節當天可以獲得，錯過的話就要再等到明年了。
                     </p>
 
                     <a href="news.html">
                         <-返回列表 </a>
                             <br>
-                            <a href="">
+                            <a href="news_in5.html">
                                 <-上一則 </a>
-                                    <a href="news_in2.html"> 下一則-> </a>
+                                    <a href=""> 下一則-> </a>
 
                 </div>
                 <div class="right container-lg">
-                    <img src="./img/news/Rectangle 196.png" alt="">
+                    <img src="./img/news/Mask group.png" alt="">
                 </div>
             </div>
 
