--- a/src/products.html
+++ b/src/products.html
@@ -39,63 +39,63 @@
 
 
         <div class="main_down container-lg">
-            <a href="./product_detail.html?prd_number=1">
+            <a href="./product_detail.html?prd_number=9">
                 <div class="down-in">
                     <img src="./img/products/panna_cotta.jpg" alt="">
                     <h5>鮮奶烙</h5>
                     <h5 class="price">NT$399</h5>
                 </div>
             </a>
-            <a href="./product_detail.html">
+            <a href="./product_detail.htmll?prd_number=8">
                 <div class="down-in">
-                    <img src="./img/products/cheese_cake.jpg" alt="">
-                    <h5>乳酪蛋糕</h5>
-                    <h5 class="price">NT$580</h5>
+                    <img src="./img/products/strawberry.png" alt="">
+                    <h5>草莓牛奶(10入)</h5>
+                    <h5 class="price">NT$499</h5>
                 </div>
             </a>
-            <a href="./product_detail.html">
+            <a href="./product_detail.htmll?prd_number=11">
                 <div class="down-in">
                     <img src="./img/products/coffe.png" alt="">
-                    <h5>咖啡牛奶(六入)</h5>
+                    <h5>咖啡牛奶(6入)</h5>
                     <h5 class="price">NT$290</h5>
                 </div>
             </a>
-            <a href="./product_detail.html">
+            <a href="./product_detail.htmll?prd_number=7">
                 <div class="down-in">
                     <img src="./img/products/strawberry.png" alt="">
-                    <h5>草莓牛奶(六入)</h5>
+                    <h5>草莓牛奶(6入)</h5>
                     <h5 class="price">NT$299</h5>
                 </div>
             </a>
-            <a href="./product_detail.html">
+            <a href="./product_detail.htmll?prd_number=10">
                 <div class="down-in">
                     <img src="./img/products/blanket_y.jpg" alt="">
                     <h5>羊毛毯(黃)</h5>
                     <h5 class="price">NT$549</h5>
                 </div>
             </a>
-            <a href="./product_detail.html">
+            <a href="./product_detail.htmll?prd_number=12">
                 <div class="down-in">
-                    <img src="./img/products/cream_roll.jpg" alt="">
-                    <h5>生乳捲</h5>
-                    <h5 class="price">NT$349</h5>
+                    <img src="./img/products/coffe.png" alt="">
+                    <h5>咖啡牛奶(12入)</h5>
+                    <h5 class="price">NT$580</h5>
                 </div>
             </a>
-            <a href="./product_detail.html">
+            <a href="./product_detail.htmll?prd_number=6">
                 <div class="down-in">
                     <img src="./img/products/animal_cookies.jpg" alt="">
                     <h5>動物餅乾</h5>
                     <h5 class="price">NT$200</h5>
                 </div>
             </a>
-            <a href="./product_detail.html">
+            <a href="./product_detail.htmll?prd_number=1">
                 <div class="down-in">
                     <img src="./img/products/blanket_r.jpg" alt="">
                     <h5>羊毛毯(紅)</h5>
                     <h5 class="price">NT$549</h5>
                 </div>
             </a>
-            <a href="./product_detail.html">
+            <a href="./product_detail.htmll?prd_number=2">
                 <div class="down-in">
                     <img src="./img/products/blanket_g.jpg" alt="">
                     <h5>羊毛毯(綠)</h5>
