--- a/src/products_necessities.html
+++ b/src/products_necessities.html
@@ -40,7 +40,7 @@
 
         <div class="main_down container-lg">
 
-            <a href="./product_detail.html">
+            <a href="./product_detail.html?prd_number=10">
                 <div class="down-in">
                     <img src="./img/products/blanket_y.jpg" alt="">
                     <h5>羊毛毯(黃)</h5>
@@ -49,14 +49,14 @@
             </a>
 
 
-            <a href="./product_detail.html">
+            <a href="./product_detail.html?prd_number=1">
                 <div class="down-in">
                     <img src="./img/products/blanket_r.jpg" alt="">
                     <h5>羊毛毯(紅)</h5>
                     <h5 class="price">NT$549</h5>
                 </div>
             </a>
-            <a href="./product_detail.html">
+            <a href="./product_detail.htmll?prd_number=2">
                 <div class="down-in">
                     <img src="./img/products/blanket_g.jpg" alt="">
                     <h5>羊毛毯(綠)</h5>
