--- a/src/news_in3.html
+++ b/src/news_in3.html
@@ -23,36 +23,33 @@
         <main class="main_min container-lg">
 
             <div class="divtop">
-                <h3>歡慶兒童節 帶小孩來牧場放電囉</h3>
+                <h3>新冠狀病毒防疫一起來</h3>
                 <br><br>
-                <pre>發布日期      3/15</pre>
+                <pre>發布日期      2/15</pre>
             </div>
 
             <div class="down container-lg">
 
                 <div class="left container-lg">
-                    <p>在兒童節4/2~4/5號連假期間，
+                    <p>在入園前請先閱讀園區防疫規定
                         <br>
-                        12歲以下兒童通通免費入園!
+                        並且遵守園區防疫規範
                         <br>
-                        陪同成人可享票價優惠180元!
+                        如有緊急狀況
                         <br>
-                        <br>
-                        歡迎大朋友小朋友藝起來
-                        <br>
-                        Sìkha 牧場度過美好時光
+                        本牧場各處都有設置緊急用電話
                     </p>
 
                     <a href="news.html">
                         <-返回列表 </a>
                             <br>
-                            <a href="">
+                            <a href="news_in2.html">
                                 <-上一則 </a>
-                                    <a href="news_in2.html"> 下一則-> </a>
+                                    <a href="news_in4.html"> 下一則-> </a>
 
                 </div>
                 <div class="right container-lg">
-                    <img src="./img/news/Rectangle 196.png" alt="">
+                    <img src="./img/news/Rectangle 1966.png" alt="">
                 </div>
             </div>
 
