--- a/src/news_in5.html
+++ b/src/news_in5.html
@@ -23,7 +23,8 @@
         <main class="main_min container-lg">
 
             <div class="divtop">
-                <h3>歡慶兒童節 帶小孩來牧場放電囉</h3>
+                <h3>【粉萌春日祭】3月周末例假日門票優惠開始啦!
+                </h3>
                 <br><br>
                 <pre>發布日期      3/15</pre>
             </div>
@@ -31,28 +32,23 @@
             <div class="down container-lg">
 
                 <div class="left container-lg">
-                    <p>在兒童節4/2~4/5號連假期間，
+                    <p>粉紅春日祭將票價給到最優惠
                         <br>
-                        12歲以下兒童通通免費入園!
+                        每張票價只要原本的9折，
                         <br>
-                        陪同成人可享票價優惠180元!
-                        <br>
-                        <br>
-                        歡迎大朋友小朋友藝起來
-                        <br>
-                        Sìkha 牧場度過美好時光
+                        活動只到3月底，錯過這次又要等到明年囉～～。
                     </p>
 
                     <a href="news.html">
                         <-返回列表 </a>
                             <br>
-                            <a href="">
+                            <a href="news_in4.html">
                                 <-上一則 </a>
-                                    <a href="news_in2.html"> 下一則-> </a>
+                                    <a href="news_in6.html"> 下一則-> </a>
 
                 </div>
                 <div class="right container-lg">
-                    <img src="./img/news/Rectangle 196.png" alt="">
+                    <img src="./img/news/Rectangle 1969.png" alt="">
                 </div>
             </div>
 
