data: include 登入彈窗

--- a/src/animal.html
+++ b/src/animal.html
@@ -12,6 +12,8 @@
     <!-- header -->
     @@include('./layout/header.html')
 
+    @@include('./layout/login_register.html')
+
     <div id="wrapper">
 
         <!-- main -->
