--- a/src/news.html
+++ b/src/news.html
@@ -11,6 +11,9 @@
 <body>
     <!-- header -->
     @@include('./layout/header.html')
+
+    @@include('./layout/login_register.html')
+    
     <div class="newsTop container-fluid">
         <h3 class="pageTitle">最新消息</h3>
     </div>
