--- a/src/products.html
+++ b/src/products.html
@@ -11,6 +11,8 @@
     <!-- header -->
     @@include('./layout/header.html')
 
+    @@include('./layout/login_register.html')
+
     <!-- 首圖 -->
     <div class="productsTop container-fluid">
         <h3 class="pageTitle">周邊產品</h3>
