--- a/src/activity.html
+++ b/src/activity.html
@@ -11,6 +11,8 @@
     <!-- header -->
     @@include('./layout/header.html')
 
+    @@include('./layout/login_register.html')
+
     <!-- 首圖 -->
     <div class="activityTop container-fluid">
         <h3 class="pageTitle">牧場節目</h3>
