--- a/src/info.html
+++ b/src/info.html
@@ -12,6 +12,8 @@
     <!-- header -->
     @@include('./layout/header.html')
 
+    @@include('./layout/login_register.html')
+
     <!-- 首圖 -->
     <div class="infoTop container-fluid">
         <h3 class="pageTitle">園區資訊</h3>
